os/bluestore: clear result in BlueRocksEnv::getChildren

see https://github.com/facebook/rocksdb/blob/master/env/env_posix.cc#L492. in
rocksdb::env_posix implementation, it will always clear result at first. We will
get a core dump when we use rocksdb::RepairDB if we do not clear result.

Fixes: http://tracker.ceph.com/issues/20857

Signed-off-by: liuchang0812 <liuchang0812@gmail.com>